# rsj

./: .gitignore  README.md  rsj.code-workspace
crawler/: Dockerfile  prepare_generic_spyder.py  prepare_generic_spyder_docker.py  requirements.txt
crawler/crawler/: items.py  pipelines.py  settings.py
crawler/crawler/spiders/: juzne_vesti_spider.py  nin_dates_spider.py  nin_pages_spider.py  nin_spider.py  pecat_spider.py  politika_spider.py  vreme_cms_spider.py  vreme_spider.py
extractor/: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
indexer/: Dockerfile  README.md  app.py  korpus.json  korpusIndexer.py  korpusV2.json  odrednicaIndexer.py  odrednice.json  odredniceV2.json  requirements.txt  sample.json
korpus/: .dockerignore  Dockerfile  Dockerfile-nginx  README.md  docker-compose.yml  nginx.conf
korpus-frontend/: .eslintrc.json  .prettierrc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json
korpus-frontend/e2e/src/: app.e2e-spec.ts
korpus-frontend/src/: index.html  styles.scss
korpus-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
korpus/backend/: manage.py  report.docx  requirements.txt  run_es_dev.sh  run_prod.sh
korpus/backend/config/: uwsgi-prod.ini
korpus/frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
recnik/: Dockerfile  Dockerfile-nginx  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  readme.txt
recnik/backend/: manage.py  requirements.txt  run_es_dev.sh  run_prod.sh
recnik/frontend/: .eslintrc.json  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
search-engine/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TECHNICAL_REPORT.md  build.sh  docker-compose.yml  entrypoint.sh  reindex.sh
search-engine/search-api/: Cargo.toml
search-engine/search-api/src/: main.rs
search-engine/search-cli/: Cargo.toml
search-engine/search-cli/src/: main.rs
search-engine/search-engine/: Cargo.toml
search-engine/search-engine/src/: engine.rs  lib.rs  morphology.rs  morphology_engine.rs  naslov.rs  naslov_engine.rs  odrednica.rs  odrednica_engine.rs  text_utils.rs  tokenizer.rs  trie.rs
services/recnik/: build-recnik-app.sh  start-recnik-app.sh  start-recnik-mysql.sh
services/traefik/: start-traefik.sh
(+776 files in other folders)
