[package]
name = "search-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "search-api"
path = "src/main.rs"

[dependencies]
search-engine = { path = "../search-engine" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo.workspace = true

[dependencies.chrono]
workspace = true
